--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ table{
     </style>
 </head>
 <body>
-    <h1>Lisat em Portugues.</h1>
+    <h1>Lista em Portugues.</h1>
 
     <table>
         <tr>
