commit -Correção de portugues

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lista em Portugues.</title>
+    <title>Lista em português.</title>
     <style>
         body{
             background-color: black;
@@ -18,14 +18,14 @@ table{
     </style>
 </head>
 <body>
-    <h1>Lista em Portugues.</h1>
+    <h1>Lista em português.</h1>
 
     <table>
         <tr>
         <th bgcolor="Red"></th>
         <th bgcolor="blue"></th>
         <th bgcolor="yellow"></th>
-        <th bgcolor="gree"></th>
+        <th bgcolor="green"></th>
         </tr>
         <tr>
             <td></td>
