Uma atualização de cor e style.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,17 @@
 table{
     box-shadow: 10px 10px 10px #000;
     border: 2px solid ;
-    margin: 5px;
+    width: 300px;
+    margin: 25px;
+}
+td{
+    border: 3px solid;
+background-color: gray;
+}
+button{
+    color: aqua;background-color: skyblue;
+
+
 }
     </style>
 </head>
@@ -22,17 +32,19 @@ table{
 
     <table>
         <tr>
-        <th bgcolor="Red"></th>
-        <th bgcolor="blue"></th>
-        <th bgcolor="yellow"></th>
-        <th bgcolor="green"></th>
+        <th bgcolor="Red">1</th>
+        <th bgcolor="blue">2</th>
+        <th bgcolor="brow">3</th>
+        <th bgcolor="green">4</th>
         </tr>
         <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td>0</td>
+            <td>0</td>
+            <td>0</td>
+            <td>0</td>
         </tr>
     </table>
+    <hr>
+    <button><a href="index01.html">Next Page</a></button>
 </body>
 </html>
