--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@ table{
     box-shadow: 10px 10px 10px #000;
     border: 2px solid ;
     margin: 5px;
+    width: 300px;
+    margin: 30px;
+}
+td{
+    width: 20px;
+    border: 3px wheat;
 }
     </style>
 </head>
@@ -22,14 +28,14 @@ table{
 
     <table>
         <tr>
-        <th bgcolor="Red"></th>
+        <th bgcolor="Red">1</th>
         <th bgcolor="blue"></th>
         <th bgcolor="yellow"></th>
         <th bgcolor="green"></th>
         </tr>
         <tr>
-            <td></td>
-            <td></td>
+            <td>2</td>
+            <td>e</td>
             <td></td>
             <td></td>
         </tr>
