--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ td{
         <th bgcolor="Red">1</th>
 
         <th bgcolor="blue">2</th>
-        <th bgcolor="brow">3</th>
+        <th bgcolor="brown">3</th>
         <th bgcolor="green">4</th>
         </tr>
         <tr>
@@ -55,7 +55,7 @@ td{
 
         <th bgcolor="blue"></th>
         <th bgcolor="yellow"></th>
-        <th bgcolor="green"></th>
+        <th bgcolor="gree"></th>
         </tr>
         <tr>
             <td>2</td>
